file change implement in code

--- a/files/index.html
+++ b/files/index.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="main_image">
-            <img class="pfp" src="main_img.png" alt="profile_img">
+            <img class="pfp" src="assets/main_img.png" alt="profile_img">
         </div>
     </div>
     
@@ -53,19 +53,19 @@
                         <td colspan="2" id="head1">Skills</td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="uiux.svg" class="skillicons" alt="ui"></div></td>
+                            <td><div class="circbg"><img src="assets/uiux.svg" class="skillicons" alt="ui"></div></td>
                             <td><div class="desctxt">UI/UX Designing</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="web.svg" class="skillicons" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/web.svg" class="skillicons" alt="web"></div></td>
                             <td><div class="desctxt">Web Development</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="gd.svg" class="skillicons" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/gd.svg" class="skillicons" alt="web"></div></td>
                             <td><div class="desctxt">Graphic Designing</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="music.svg" class="skillicons" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/music.svg" class="skillicons" alt="web"></div></td>
                             <td><div class="desctxt">Music Production</div></td>
                     </tr>
                 </table>
@@ -79,19 +79,19 @@
                         <td colspan="2" id="head1">Softwares</td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="figma.svg" class="skillicons" alt="ui"></div></td>
+                            <td><div class="circbg"><img src="assets/figma.svg" class="skillicons" alt="ui"></div></td>
                             <td><div class="desctxt">Figma</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="illustrator.svg" class="skillicons" id="ai" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/illustrator.svg" class="skillicons" id="ai" alt="web"></div></td>
                             <td><div class="desctxt">Adobe Illustrator</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="photoshop.svg" class="skillicons" id="ps" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/photoshop.svg" class="skillicons" id="ps" alt="web"></div></td>
                             <td><div class="desctxt">Photoshop</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="vsode.svg" class="skillicons" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/vsode.svg" class="skillicons" alt="web"></div></td>
                             <td><div class="desctxt">VS Code</div></td>
                     </tr>
                 </table>
@@ -105,19 +105,19 @@
                         <td colspan="2" id="head1">Hobbies</td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="mic.svg" class="skillicons" alt="ui"></div></td>
+                            <td><div class="circbg"><img src="assets/mic.svg" class="skillicons" alt="ui"></div></td>
                             <td><div class="desctxt">Singing</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="badminton.svg" class="skillicons" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/badminton.svg" class="skillicons" alt="web"></div></td>
                             <td><div class="desctxt">Badminton</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="gaming.svg" class="skillicons" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/gaming.svg" class="skillicons" alt="web"></div></td>
                             <td><div class="desctxt">Gaming</div></td>
                     </tr>
                     <tr>
-                            <td><div class="circbg"><img src="binge.svg" class="skillicons" alt="web"></div></td>
+                            <td><div class="circbg"><img src="assets/binge.svg" class="skillicons" alt="web"></div></td>
                             <td><div class="desctxt">Binge-watch</div></td>
                     </tr>
                 </table>
