edit file structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body background="bgptrn.png">
     <div class="navbar">
         <div class="logo">
-            <img src="new_pfp.png" alt="logo" class="krad">
+            <img src="assets/new_pfp.png" alt="logo" class="krad">
         </div>
         
         <div class="links">
