browser icon path edit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandark portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="logo.ico">
+    <link rel="icon" href="assets/logo.ico">
 </head>
 <body background="bgptrn.png">
     <div class="navbar">
