background path edit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="assets/logo.ico">
 </head>
-<body background="bgptrn.png">
+<body background="assets/bgptrn.png">
     <div class="navbar">
         <div class="logo">
             <img src="assets/new_pfp.png" alt="logo" class="krad">
